--- a/css/pages.css
+++ b/css/pages.css
@@ -1,385 +1,387 @@
-@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap'); 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
 
-*{
-  margin:0px;
-  padding:0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-body{
-    font-family: "Vollkorn", Georgia, serif;
+body {
+  font-family: "Vollkorn", Georgia, serif;
 }
 
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-img{
-    display: block;
-    max-width: 100%;
-    border-radius: 5px;
+img {
+  display: block;
+  max-width: 100%;
+  border-radius: 5px;
 }
 
-html, body {
-	background-color: black;
-	background-attachment: fixed;
-	background-size: 100%;
+html,
+body {
+  background-color: black;
+  background-attachment: fixed;
+  background-size: 100%;
   scroll-behavior: smooth;
-	background-image: url('https://media.giphy.com/media/UYBDCJjwOd9Re/giphy.gif');
-	background-repeat: repeat;
-} 
+  background-image: url("https://media.giphy.com/media/UYBDCJjwOd9Re/giphy.gif");
+  background-repeat: repeat;
+}
 
 /* Layout - Grid Geral */
 
-.layout{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
+.layout {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
     "header header header"
     "content content content"
     "footer footer footer";
 }
 
-.col-wide{
-    grid-column: 1/-1;
+.col-wide {
+  grid-column: 1/-1;
 }
 
 /* Header */
 
-.header{
-    grid-area: header;
-    background: linear-gradient(136deg,#000000,#040F55);
-    padding: 15px;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
+.header {
+  grid-area: header;
+  background: linear-gradient(136deg, #000000, #040f55);
+  padding: 15px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
 }
 
-.header nav ul{
-    display: flex;
-    flex-wrap: wrap;
+.header nav ul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.header nav a{
-    display: block;
-    padding: 10px;
-    color: whitesmoke;
-    font-size: 1.125em;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    transition: 0.1s;
+.header nav a {
+  display: block;
+  padding: 10px;
+  color: whitesmoke;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.1s;
 }
 
-.header nav a:hover{
-    background: rgba(0, 0, 0, 0.5);
+.header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .header li + li {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
-.logo{
-    max-width: 120px;
+.logo {
+  max-width: 120px;
 }
 
 /* Content */
 
-.content{
-    grid-area: content;
-    margin: 0 auto;
-    color: white;
+.content {
+  grid-area: content;
+  margin: 0 auto;
+  color: white;
 }
 
 .content .titulo {
-    font-size: 2rem;
-    text-align: center;
-    color: white;
-    padding: 30px;
+  font-size: 2rem;
+  text-align: center;
+  color: white;
+  padding: 30px;
 }
 
-.content .mapa{
-    display: flex;
-		padding: 1% 20%;
-}
-
-.content img{
-    height: 400px;
-    width:auto;
-}
-.content .sobre .texto {
-  font-family: 'Roboto', sans-serif;
+.content .mapa {
+  display: flex;
   padding: 1% 20%;
 }
-.content .sobre .texto h2{ 	
-  text-align:left;
+
+.content img {
+  height: 400px;
+  width: auto;
+}
+.content .sobre .texto {
+  font-family: "Roboto", sans-serif;
+  padding: 1% 20%;
+}
+.content .sobre .texto h2 {
+  text-align: left;
   font-size: 28px;
   margin-top: 16px;
   margin-bottom: 16px;
 }
-.content .sobre .texto p{
+.content .sobre .texto p {
   font-size: 20px;
   margin-top: 8px;
   margin-bottom: 8px;
-	text-align:left;
-} 
-.content .sobre .texto j{
+  text-align: left;
+}
+.content .sobre .texto j {
   font-weight: bold;
   font-size: 25px;
-	text-align:left;
-} 
-.content .sobre .texto ji{
+  text-align: left;
+}
+.content .sobre .texto ji {
   font-weight: bold;
   font-size: 15px;
-	text-align:left;
+  text-align: left;
 }
-.content .sobre .texto j a, 
-.content .sobre .texto j a:hover{
+.content .sobre .texto j a,
+.content .sobre .texto j a:hover {
   text-decoration: none;
-  color:white;
+  color: white;
 }
-.content iframe{
+.content iframe {
   margin: 0 auto;
-  width: 100%;  
+  width: 100%;
   border: 10px solid black;
-	border-radius: 10px;
+  border-radius: 10px;
 }
-.content .sobre .slide{
-	padding: 1% 22%;
+.content .sobre .slide {
+  padding: 1% 22%;
 }
-.content .sobre .slide img{
-	width:600px;
-	height: 800px;
+.content .sobre .slide img {
+  width: 600px;
+  height: 800px;
 }
 
 /* Footer */
 
-.footer{
-    grid-area: footer;
-    background: linear-gradient(136deg,#000000,#040F55);
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-    grid-template-rows: 1fr auto;
-    gap: 15px;
-    text-align: center;
-    justify-content: center;
-    align-self: center;
-    padding: 40px 15% 15px;
-    color: white;
-    font-size: 1rem;
+.footer {
+  grid-area: footer;
+  background: linear-gradient(136deg, #000000, #040f55);
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-rows: 1fr auto;
+  gap: 15px;
+  text-align: center;
+  justify-content: center;
+  align-self: center;
+  padding: 40px 15% 15px;
+  color: white;
+  font-size: 1rem;
 }
 
-.footer section.fale-conosco ul li{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 15px 15px 15px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    align-content: space-around
+.footer section.fale-conosco ul li {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 15px 15px 15px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-content: space-around;
 }
 
-.footer section.fale-conosco a{
-    color: #7B68EE;
-    text-decoration: none;
-    margin: 30px;
-    display: grid;
-    justify-content: center;
-    align-content: center;
+.footer section.fale-conosco a {
+  color: #7b68ee;
+  text-decoration: none;
+  margin: 30px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
 }
 
-.footer section.fale-conosco a:hover{
-    color: #7B68EE;
+.footer section.fale-conosco a:hover {
+  color: #7b68ee;
 }
 
-.footer section.social a{
-    color: #7B68EE;
-    text-decoration: none;
-    margin: 30px;
-    border: 3px solid #7B68EE;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    transition: 0.1s;
+.footer section.social a {
+  color: #7b68ee;
+  text-decoration: none;
+  margin: 30px;
+  border: 3px solid #7b68ee;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  transition: 0.1s;
 }
 
 .footer section.social ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.footer section.social ul a{
-    align-items: center;
+.footer section.social ul a {
+  align-items: center;
 }
 
-.footer section.social a:hover{
-    color: #7B68EE;
-    background: rgba(0, 0, 0, 0.5);
+.footer section.social a:hover {
+  color: #7b68ee;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-
-.footer section.local{
-    display: grid; 
-    justify-content: center;
+.footer section.local {
+  display: grid;
+  justify-content: center;
 }
 
-.footer section.local a{
-    color: #7B68EE;
+.footer section.local a {
+  color: #7b68ee;
 }
 
-.footer section.copyright{
-    font-size: 12px;
-    font-weight: bold;
-    font-style: italic;
-    color: white;
-    text-align: center;
-    padding: 0px;
+.footer section.copyright {
+  font-size: 12px;
+  font-weight: bold;
+  font-style: italic;
+  color: white;
+  text-align: center;
+  padding: 0px;
 }
 
 /*	Portabilidades */
 
-@media (max-width:1200px){                                     
-    .layout{
-      grid-template-columns: minmax(160px, 1fr) 1fr ;
-      grid-template-areas:
-        "header header "
-        "content content"
-        "footer footer "
-    }
-  
-    .content{
-        display: grid;
-        grid-template-columns: minmax(160px, 1fr);
-        grid-template-rows: auto;
-    }
-		.content .sobre .slide{
-			padding: 1% 15%;
-		}
-		.content .sobre .texto{
-			padding: 2% 5%;
-		} 
+@media (max-width: 1200px) {
+  .layout {
+    grid-template-columns: minmax(160px, 1fr) 1fr;
+    grid-template-areas:
+      "header header "
+      "content content"
+      "footer footer ";
+  }
 
-    .footer{
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto;
-    }
+  .content {
+    display: grid;
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: auto;
+  }
+  .content .sobre .slide {
+    padding: 1% 15%;
+  }
+  .content .sobre .texto {
+    padding: 2% 5%;
+  }
 
-    .footer section.local{
-        display: none;
-    }
+  .footer {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto;
+  }
 
-    .footer section.fale-conosco{
-        display: none;
-    }
-    .footer section.social ul{
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
+  .footer section.local {
+    display: none;
+  }
+
+  .footer section.fale-conosco {
+    display: none;
+  }
+  .footer section.social ul {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 }
 
-@media (max-width:900px){                                     
-    .layout{
-      grid-template-columns: 1fr ;
-      grid-template-areas:
-        "header"
-        "content"
-        "footer"
-    }
-  	.header{
-			grid-template-rows: 1fr;
-			gap:5px;
-		}
-		.header nav ul{
-			display: flex;
-			justify-content: flex-start;
-		}
-		.header nav a{
-	    display: block;
-	    padding: 5px;
-	    color: whitesmoke;
-	    font-size: 1.2rem;
-	    background: rgba(0, 0, 0, 0.1);
-	    border-radius: 5px;
-	    transition: 0.1s;
-		}
-		.header .menu{
-			justify-content: flex-end;
-			padding: 0px;
-		}
-    .content{
-        display: grid;
-        grid-template-columns: minmax(160px, 1fr);
-        grid-template-rows: auto;
-    }
-		.content .sobre .slide{
-			padding: 1% 0%;
-		}
-		.content .sobre .texto{
-			padding: 2% 5%;
-		} 
-		.content .mapa, .content iframe{
-			padding: 0;
-			border-radius: 0px;
-		}
-		.content .sobre .slide img{
-			width:100%;
-			height: 900px;
-		}
-    .footer{
-        grid-template-columns: minmax(160px, 1fr);
-        grid-template-rows: 1fr auto;
-    }
+@media (max-width: 900px) {
+  .layout {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "content"
+      "footer";
+  }
+  .header {
+    grid-template-rows: 1fr;
+    gap: 5px;
+  }
+  .header nav ul {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .header nav a {
+    display: block;
+    padding: 5px;
+    color: whitesmoke;
+    font-size: 1.2rem;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    transition: 0.1s;
+  }
+  .header .menu {
+    justify-content: flex-end;
+    padding: 0px;
+  }
+  .content {
+    display: grid;
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: auto;
+  }
+  .content .sobre .slide {
+    padding: 1% 0%;
+  }
+  .content .sobre .texto {
+    padding: 2% 5%;
+  }
+  .content .mapa,
+  .content iframe {
+    padding: 0;
+    border-radius: 0px;
+  }
+  .content .sobre .slide img {
+    width: 100%;
+    height: 900px;
+  }
+  .footer {
+    grid-template-columns: minmax(160px, 1fr);
+    grid-template-rows: 1fr auto;
+  }
 
-    .footer section.local{
-        display: none;
-    }
+  .footer section.local {
+    display: none;
+  }
 
-    .footer section.fale-conosco{
-        display: none;
-    }
-    .footer section.social ul{
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
+  .footer section.fale-conosco {
+    display: none;
+  }
+  .footer section.social ul {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 }
-@media (max-width:450px){
-	.content .sobre .slide{
-		padding: 1% 0%;
-	}
-	.content .sobre .slide img{
-		height: 700px;
-	}
-	.content .sobre .texto{
-		padding: 2% 5%;
-	}
-	.content .mapa, .content iframe{
-		padding: 0;
-		border-radius: 0px;
-	}
-	.header nav ul{
-		flex-direction: column;
-		justify-content: flex-end;
-	}
-	
-	.header nav ul li{
-		text-align: end;
-	}
-	.header li + li {
+@media (max-width: 450px) {
+  .content .sobre .slide {
+    padding: 1% 0%;
+  }
+  .content .sobre .slide img {
+    height: 700px;
+  }
+  .content .sobre .texto {
+    padding: 2% 5%;
+  }
+  .content .mapa,
+  .content iframe {
+    padding: 0;
+    border-radius: 0px;
+  }
+  .header nav ul {
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .header nav ul li {
+    text-align: end;
+  }
+  .header li + li {
     margin-left: 0px;
-	}
-	.header nav a, .header nav a:hover{
-		background: rgba(0, 0, 0, 0);
-	}
+  }
+  .header nav a,
+  .header nav a:hover {
+    background: rgba(0, 0, 0, 0);
+  }
 }
